[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/dogshadow.png" type="Texture" id=1]
[ext_resource path="res://sprites/critters/whizfluff/wf0.png" type="Texture" id=2]
[ext_resource path="res://sprites/critters/whizfluff/wf5.png" type="Texture" id=3]
[ext_resource path="res://sprites/critters/whizfluff/wf2.png" type="Texture" id=4]
[ext_resource path="res://sprites/critters/whizfluff/wf7.png" type="Texture" id=5]
[ext_resource path="res://sprites/critters/whizfluff/wf3.png" type="Texture" id=6]
[ext_resource path="res://sprites/critters/whizfluff/wf4.png" type="Texture" id=7]
[ext_resource path="res://sprites/critters/whizfluff/wf6.png" type="Texture" id=8]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=9]
[ext_resource path="res://hitnhurtboxes/hurtbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/Whizfluff.gd" type="Script" id=11]
[ext_resource path="res://Brains/Stats.tscn" type="PackedScene" id=12]
[ext_resource path="res://hitnhurtboxes/hitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://hitnhurtboxes/SoftCollision.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 22.2874

[sub_resource type="CapsuleShape2D" id=3]
radius = 55.4349
height = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 739.024

[sub_resource type="CircleShape2D" id=5]
radius = 13.6155

[sub_resource type="CircleShape2D" id=6]
radius = 83.9729

[node name="Whizfluff" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.34305, -6.25301 )
scale = Vector2( 0.876777, 0.876777 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="dogshadow" type="Sprite" parent="."]
position = Vector2( 1.10567, 48.2723 )
scale = Vector2( 0.538405, 0.639652 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.781403, 21.8794 )
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 10 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 2.34424, -9.37691 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 12 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.278431 )
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 13 )]
visible = false
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -1.29431, -23.2973 )
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 14 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -0.783981, 21.9516 )
shape = SubResource( 6 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="out_of_health" from="Stats" to="." method="_on_Stats_out_of_health"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="HitBox"]

[editable path="SoftCollision"]
